# aquaterm

./: Cargo.toml  README.md
docs/: aquaterm.tape  screenshot.tape  spec.md
src/: color.rs  config.rs  fish.rs  framebuffer.rs  http_api.rs  i18n.rs  main.rs  persist.rs  rng.rs  sim.rs  sound.rs
