[package]
name = "aquaterm"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
unicode-width = "0.1"
# 効果音: 外部音源(wav/mp3等)は使わず、正弦波を都度合成して再生するだけなので
# デコーダ類は不要。再生機能(playback)のみを有効にする。
# 実機フィードバック(「音無しでもクロスコンパイルを通したい」)対応: Linux向け
# クロスコンパイル環境ではrodioの依存(alsa-sys)がpkg-config経由でALSAを探せず
# ビルドに失敗することがあるため、optional化してsound featureで切り離せるようにする。
rodio = { version = "0.22", default-features = false, features = ["playback"], optional = true }
# 昼夜連動の照明変化: システムのローカル時刻(時)を取得するためだけに使う
# (default-features = false + clock のみで、シリアライズ等の余分な機能は入れない)。
chrono = { version = "0.4.45", default-features = false, features = ["clock"] }
# HTTP API(ローカルループバックのみ・新規): 依存を増やしたくないため、素朴な
# ブロッキングHTTPサーバーであるtiny_httpを使う(tokio等の非同期ランタイムは
# 不要)。詳細はsrc/http_api.rs冒頭のコメント参照。
tiny_http = "0.12"
# HTTP APIの起動設定(~/.config/aquaterm/config.toml)の読み込み用。
# 詳細はsrc/config.rs参照。
toml = "1"

[features]
default = ["sound"]
sound = ["rodio"]

[profile.release]
opt-level = 3
